--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     }
   },
   "engines": {
-    "node": "^9.5.0",
-    "npm": "^5.8.0"
+    "node": ">=9.5.0",
+    "npm": ">=5.8.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
