--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "jest-text-transformer",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "text file transformer to load text file in test files",
-  "main": "src/index.js",
   "author": "janouma",
   "license": "ISC",
+  "main": "src/index.js",
+  "files": [
+    "src/index.js"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/janouma/jest-text-transformer.git"
   },
   "scripts": {
-    "lint": "eslint \"**/*.js\""
+    "lint": "eslint \"**/*.js\"",
+    "test": "jest"
   },
   "pre-commit": [
     "lint"
@@ -26,6 +30,11 @@
       "node": true
     }
   },
+  "jest": {
+    "transform": {
+      "^.+\\.txt$": "./src/index.js"
+    }
+  },
   "engines": {
     "node": ">=9.5.0",
     "npm": ">=5.8.0"
@@ -35,6 +44,7 @@
     "eslint": "^4.19.1",
     "eslint-config-standard": "^12.0.0-alpha.0",
     "eslint-plugin-standard": "^3.1.0",
+    "jest": "^28.1.0",
     "pre-commit": "^1.2.2",
     "standard": "^11.0.1"
   },
